Fixed random spacing

--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -3,7 +3,7 @@
 #contact-form {
     width: 55%;
     min-width: 330px;
-    margin: 20px auto 0;
+    margin: 20px auto;
     background-color: $c-background-primary;
     @include border-card;
     @include border-shadow-soft;
